Odd layout bug fix. Div that was spacing below top nav component endedup wrapping the home page content.

--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -45,3 +45,7 @@
   box-shadow: 0 4px 6px -1px rgba(var(--blackAndWhite), 0.1),
     0 2px 4px -1px rgba(var(--blackAndWhite), 0.06);
 }
+
+.nav-space {
+  margin-top: 3.7rem;
+}
